# dstv-tools

./: .gitignore  README.md  pyproject.toml  requirements.txt
dstv_tools/exporters/: compose_profile_faces.py  profile_dxf_exporter.py
dstv_tools/plotters/: interactive_plotter.py  profile_plotter.py
dstv_tools/utils/: plotter.py
examples/: inspect_DXF_export.py  inspect_interactive_plotting.py  inspect_plotting_faces.py
examples/data/: 1009_HEA160.nc_N°1 pz.nc  1010_HEA240.nc_N°1 pz.nc  2519.nc1  4026.nc  553.nc  Plate.nc  Rectangular tube.nc  Sheet.nc  Slotted.nc
